# streamdask-final

./: INSTALL.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: manifest.webmanifest  sw.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
