[package]
name = "streamdask_mix_live"
version = "0.1.0"
description = "Native desktop wrapper for StreamDask Mix Live"
authors = ["StreamDask"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]